Ajout de l'en-tête et du titre principal

--- a/index.html
+++ b/index.html
@@ -11,16 +11,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--Ajout des icônes Font Awesome-->
+    <script src="https://kit.fontawesome.com/944be96b40.js" crossorigin="anonymous"></script>
+    <!--------------------------------->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+            <nav>
+                <a href="index.html">
+                    <img src="images/logo/Booki.png" alt="Logo Booki"/>
+                </a>
+                <div>
+                    <a href="#hebergements">Hébergements</a>
+                    <a href="#activites">Activités</a>
+                </div>
+            </nav>
+        </header>
         <main>
+            <div class="recherche-herbegement">
+                <h2 class="titre-hebergement">Trouvez votre hébergement pour des vacances de rêve<br>
+                    <span class="sous-titre-hebergement">En plein centre-ville ou en pleine nature</span>
+                </h2>
+            </div>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
-
+                    <h2 id="hebergements">Hébergements à Marseille</h2>
                 </section>
                 <section class="populaires">
                     <div class="populaires-title">
@@ -82,6 +100,10 @@
                     </div>
                 </section>
             </div>
+            <section class="activites">
+                <h2 id="activites">Activités à Marseille</h2>
+            </section>
+
         </main>
         <footer></footer>
     </div>
