Corrections suite à la session de mentorat (nav, barre de recherche, filtres)

--- a/index.html
+++ b/index.html
@@ -21,13 +21,21 @@
     <div class="main-container">
         <header>
             <nav>
-                <a href="index.html">
-                    <img src="images/logo/Booki.png" alt="Logo Booki"/>
-                </a>
-                <div>
-                    <a href="#accommodations">Hébergements</a>
-                    <a href="#activities">Activités</a>
-                </div>
+                <ul>
+                    <li>
+                        <a href="index.html">
+                            <img src="images/logo/Booki.png" alt="Logo Booki"/>
+                        </a>
+                    </li> 
+                    <div>
+                        <li>
+                            <a href="#accommodations">Hébergements</a>
+                        </li>
+                        <li>
+                            <a href="#activities">Activités</a>
+                        <li>
+                    </div>
+                </ul>
             </nav>
         </header>
         <main>
@@ -50,24 +58,24 @@
                     </div>
                 </div>
             </form>
-            <div class="filters">
+            <div class="filters-container">
                 <span class="filter-name">Filtres</span>
-                <div class="economic-filter">
+                <div class="filter">
                     <a href="" alt="Filtre Économique">
                         <i class="fa-solid fa-money-bill-wave"><span class="filter-title">Économique</span></i>
                     </a>
                 </div>
-                <div class="familial-filter">
+                <div class="filter">
                     <a href="" alt="Filtre Familial">
                         <i class="fa-solid fa-person"><span class="filter-title">Familial</span></i>
                     </a>                
                 </div>
-                <div class="romantic-filter">
+                <div class="filter">
                     <a href="" alt="Filtre Romantique">
                         <i class="fa-solid fa-heart"><span class="filter-title">Romantique</span></i>
                     </a>
                 </div>
-                <div class="our-nuggets-filter">
+                <div class="filter">
                     <a href="" alt="Filtre Nos pépites">
                         <i class="fa-solid fa-fire"><span class="filter-title">Nos pépites</span></i>
                     </a>
