--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
     <div class="main-container">
 
-        <header>
-            <nav>
+        <header class="main-header">
+            <nav class="main-nav">
                 <ul>
                     <li>
                         <a href="index.html">
@@ -40,43 +40,41 @@
         <main>
             <h1 class="accommodation-title">Trouvez votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre-ville ou en pleine nature</p>
-            <form method="get" action="#">
-                <div class="search-bar">
-                    <div class="localization-point">
-                        <i class="fa-sharp fa-solid fa-location-dot"></i>
-                    </div>
-                    <div class="search-text">
-                        <input type="text" name="search" id="search">
-                    </div>
-                    <button class="search-button" type="button">
-                        <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
-                        <span>Rechercher</span>
-                    </button>
+            <div class="search-bar">
+                <div class="localization-point">
+                    <i class="fa-sharp fa-solid fa-location-dot"></i>
                 </div>
-            </form>
+                <div class="search-text">
+                    <input type="text" name="search" id="search">
+                </div>
+                <button class="search-button" type="button">
+                    <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
+                    <span>Rechercher</span>
+                </button>
+            </div>
             <div class="filters-container">
                 <span class="filter-name">Filtres</span>
                 <div class="filter">
                     <span>
-                        <i class="fa-solid fa-money-bill-wave"></i>
+                        <i class="fa-solid fa-money-bill-wave fa-lg"></i>
                         <span class="filter-title">Économique</span>
                     </span>
                 </div>
                 <div class="filter">
                     <span>
-                        <i class="fa-solid fa-person"></i>
+                        <i class="fa-solid fa-person fa-lg"></i>
                         <span class="filter-title">Familial</span>
                     </span>
                 </div>
                 <div class="filter">
                     <span>
-                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart fa-lg"></i>
                         <span class="filter-title">Romantique</span>
                     </span>
                 </div>
                 <div class="filter">
                     <span>
-                        <i class="fa-solid fa-fire"></i>
+                        <i class="fa-solid fa-fire fa-lg"></i>
                         <span class="filter-title">Nos pépites</span>
                     </span>
                 </div>
@@ -321,22 +319,36 @@
             </section>
         </main>
 
-        <footer>
+        <footer class="main-footer">
             <ul>
                 <li class="footer-titles">À propos</li>
-                <li><a href="#">Fonctionnement du site</a></li>
-                <li><a href="#">Conditions générales</a></li>
-                <li><a href="#">Données et confidentialité</a></li>
+                <li>
+                    <a href="#">Fonctionnement du site</a>
+                </li>
+                <li>
+                    <a href="#">Conditions générales</a>
+                </li>
+                <li>
+                    <a href="#">Données et confidentialité</a>
+                </li>
             </ul>
             <ul>
                 <li class="footer-titles">Nos hébergements</li>
-                <li><a href="#">Charte qualité</a></li>
-                <li><a href="#">Proposer votre hôtel</a></li>
+                <li>
+                    <a href="#">Charte qualité</a>
+                </li>
+                <li>
+                    <a href="#">Proposer votre hôtel</a>
+                </li>
             </ul>
             <ul>
                 <li class="footer-titles">Assistance</li>
-                <li><a href="#">Centre d’aide</a></li>
-                <li><a href="#">Nous contacter</a></li>
+                <li>
+                    <a href="#">Centre d’aide</a>
+                </li>
+                <li>
+                    <a href="#">Nous contacter</a>
+                </li>
             </ul>
         </footer>
 
